Fix: In narrow view Narrow windows platform has a long link that breaks the layout

--- a/src/styles/components/_platform_selector.sass
+++ b/src/styles/components/_platform_selector.sass
@@ -9,6 +9,7 @@
   clear: both
   background-color: lighten(#32526a, 6%)
   border-bottom: 1px solid #32526a
+  word-wrap: break-word
 
 
 .platform_selector--tabs
